Update CommandUtil.java